--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@pdftron/pdfnet-node": "^11.1.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "p-pipe": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
