--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@pdftron/pdfnet-node": "^11.1.0",
     "express": "^4.21.2",
-    "p-pipe": "^4.0.0"
+    "p-pipe": "^4.0.0",
+    "trough": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
