--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-drag-drop-files": "^2.4.0"
+    "react-drag-drop-files": "^2.4.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
