--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pdftron/pdfnet-node": "^11.1.0",
+    "body-parser": "^1.20.3",
     "express": "^4.21.2"
   },
   "devDependencies": {
