--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@pdftron/pdfnet-node": "^11.1.0",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "nodemon": "^3.1.7",
