--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "@pdftron/pdfnet-node": "^11.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.76.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
